--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "pm2": "^2.10.1",
     "popper.js": "^1.14.1",
     "pug": "^2.0.1",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
