--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.3.1",
     "knex": "^0.14.4",
     "lodash": "^4.17.5",
+    "morgan": "^1.9.1",
     "mysql": "^2.15.0",
     "pm2": "^2.10.1",
     "popper.js": "^1.14.1",
