--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://gitlab.com/fluxsauce/rock-paper-scissors#README",
   "dependencies": {
+    "@types/node": "^11.12.2",
     "bootstrap": "^4.0.0",
     "connect-session-knex": "^1.4.0",
     "express": "^4.16.3",
